# unicamp-ea979-2026-cg01-primeirorenderizador-EA979-PrimeiroRenderizador

./: README.md  pyproject.toml
.github/workflows/: classroom.yml  generate_workflow.py  grading.txt
entrypoints/: 01-first_cube.py  02-pyramid.py  03-grandchild.py  04-intersection.py  05-animation.py
src/urenderer/: __init__.py
src/urenderer/application/: runtime.py
src/urenderer/geometry/: __init__.py
src/urenderer/geometry/polygonal_ifs/: __init__.py  cube.py  pyramid.py
src/urenderer/node/: __init__.py  camera.py  node.py
src/urenderer/renderer/: __init__.py  pyplot_renderer.py  renderer.py
src/urenderer/utils/: __init__.py  clear_workdir.py  get_filename_unique.py  image_to_video.py
tests/urenderer/application/: test_runtime.py
tests/urenderer/node/: test_camera.py  test_node.py
tests/urenderer/renderer/: test_pyplot_renderer.py
